--- a/fila/fila.html
+++ b/fila/fila.html
@@ -23,6 +23,7 @@
 
         <button id="remover" type="submit">Remover</button>
     </div>
+    <p id="feedboack"></p>
 
     <script src="jquery-3.4.0.js" type="text/javascript"></script>
     <script src="front.js" type="text/javascript"></script>
